--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^2.2.19"
   }
 }
