--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "framer-motion": "^12.8.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.503.0",
+    "modern-normalize": "^3.0.1",
     "mysql2": "^3.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,8 +48,8 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.6",
-    "tailwindcss": "^2.2.19"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
