--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^5.1.0",
     "framer-motion": "^12.8.0",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.503.0",
     "mysql2": "^3.14.1",
     "react": "^19.0.0",
