Fixes in previous changes

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.503.0",
     "modern-normalize": "^3.0.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
